[package]
name = "telebot"
version = "0.1.0"
authors = ["ksander314 <olexander314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
telegram-bot = { git = 'https://github.com/telegram-rs/telegram-bot' }
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1.0"